samples/_failures_safe/1761245833_5fa5a5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fb50dc88.c: In function ‘main’:
./samples/SAFE/__tmp_fb50dc88.c:165:5: error: expected expression at end of input
  165 |     if (len > 0 && input[len - 1] ==
      |     ^~
./samples/SAFE/__tmp_fb50dc88.c:165:5: error: expected declaration or statement at end of input
